# rn-libyuv-resizer

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  LibyuvResizer.podspec  README.md  package.json  tsconfig.json
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
.specs/codebase/: ARCHITECTURE.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.specs/features/custom-output-path/: design.md  spec.md  tasks.md
.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
android/: CMakeLists.txt  build.gradle
android/src/androidTest/java/com/libyuvresizer/: FakePromise.kt  FakeReactContext.kt  LibyuvResizerModuleErrorTest.kt  LibyuvResizerModuleFilterModeTest.kt  LibyuvResizerModuleIntegrationTest.kt  LibyuvResizerModuleOutputPathTest.kt  LibyuvResizerModuleRotationTest.kt  LibyuvResizerModuleScaleConstraintTest.kt  TestFixtures.kt
android/src/main/cpp/: LibyuvResizerModule.cpp
android/src/main/java/com/libyuvresizer/: DimensionCalculator.kt  LibyuvResizerModule.kt  LibyuvResizerPackage.kt  ResizeValidator.kt
android/src/test/java/com/libyuvresizer/: DimensionCalculatorTest.kt  ResizeValidatorTest.kt
example/: app.json  package.json
example/android/: gradle.properties  settings.gradle
example/ios/: Podfile
example/src/: App.tsx
ios/: LibyuvResizer.h  LibyuvResizer.mm
src/: NativeLibyuvResizer.ts  index.tsx  multiply.native.tsx  multiply.tsx  resizer.native.tsx  resizer.tsx
src/__tests__/: NativeLibyuvResizer.test.ts  index.test.tsx
(+27 files in other folders)
